Created attachment 108605 [details] dmesg and xorg log Environment: ----------------------------------- Platform:BDW Libdrm:(master)libdrm-2.4.58-4-g00847fa48b83a85b0cb882594a12ed1511f780db Mesa:(master)1a170980a09d82201b88e3fe20684a0df2cfea80 Xserver:(master)xorg-server-1.16.0-429-gd181e52ceb9ae44e1faa8d5af8805f43328da6c2 Xf86_video_intel:(master)2.99.916-118-gd08a5f555a0c47ae23c0f9a890b512cb23e74feb Cairo:(master)f9b65ae1fc91bc558a01c2ad7be5a121c6f10818 Libva:(master)ccd93de5a707e92a629cccd595757c8d436fa3cc Libva_intel_driver:(master)f11176415ec26eb5960ba6841d2d9c22f2cabc60 Kernel:(drm-intel-nightly)88a443f454a4d8f779a9bff51f2ef334f5f69372 Bug detailed description: --------------------------------------------- 1.Screen starts to flicker after I start X or back to console from X. Please refer to attachment for dmesg.log and Xorg log. 2. Video link http://youtu.be/vWd46hqJC4Q . Bug 83130 has been VERIFIED FIXED,so it's the regression issue. Reproduce steps ---------------------------- 1. xinit& 2. switch chvt 1 or 2 for several times
Does this happen on all of your BDW versions? (We've seen similar issue on i7 F0, but not on i3 E2)
The flicker should be pch or cpu underruns. Can you attach the drm.debug=6 dmesg as plain/text?
Created attachment 108666 [details] dmesg.log
(In reply to Chris Wilson from comment #2) > The flicker should be pch or cpu underruns. Can you attach the drm.debug=6 > dmesg as plain/text? Yes,this happen on all of the BDW versions. Please refer to attach the drm.debug=6 dmesg info.
I'm afraid you attached the wrong dmesg. It has no drm.debug at all.
Created attachment 108712 [details] dmesg with drm_debug Sorry,I attach it again,thanks!
There's been a lot of fixes to BDW since this bug was filed, and we haven't seen this issue on our side for a long time. Can this still be reproduced on BDW?
(In reply to Eero Tamminen from comment #7) > There's been a lot of fixes to BDW since this bug was filed, and we haven't > seen this issue on our side for a long time. Can this still be reproduced > on BDW? On WW52, I still observed this issue on BDW F0 machine. Will update the detail sw stack after vacation back.
use 2014-12-31 GFX SW stack still can reproduce this issue on BDW: Libdrm: (master)libdrm-2.4.58-19-gf99522e678dbbaffeca9462a8edcbe900574dc12 Mesa: (master)609c3e51f5ca8abb15867537997369e7e8a678e3 Xf86_video_intel: (master)2.99.917-1-g0d42b0ed25d4112e0b3e3218e5c42947bbeb9e27 Cairo: (master)4a225fca5f121c31ddaa0af80a13bf95a7f21a5b Libva: (master)e97ac9e78cd475a13e722c455e34d5d39d0f059d Libva_intel_driver: (master)43bd81abdde40b50ac71f6f44eb04e4eaf5af5f6 Kernel: (drm-intel-nightly)07d0c831d9207c937595f081c8fddbddbf53756f
*** Bug 88837 has been marked as a duplicate of this bug. ***
Please retry current drm-intel-nightly, and attach dmesg with drm.debug=14 module parameter set. Please attach plain text dmesg, and do not compress them. Thanks.
Something to test is: i915.enable_ips=0
current -nightly (2b5fb1d021) works, and i915.enable_ips=0 works around the issue with 3.19
drm-intel-next-2015-02-14 is also good, but a build from the branch on Feb 4th (b838cbee0d6f023) is not
drm-intel-nightly_dbd79c_20150213+ is also good. Verified this bug.
The latest nightly(b18ca5)with i915.enable_ips=0 can works. So reopen this bug.
Related/dupe: bug 83497.
4c3630a0cb6ccf15ce58718700aef8164f632701(In reply to Jani Nikula from comment #17) > Related/dupe: bug 83497. Possibly, but this affects 1080p as well and seems triggerable with a modeset away from X, whereas bug 83497 seems more persistent and more likely that it is just the cdclck being run too close to maximum at 4k.
*** Bug 89761 has been marked as a duplicate of this bug. ***
*** Bug 89813 has been marked as a duplicate of this bug. ***
*** Bug 89848 has been marked as a duplicate of this bug. ***
This bug still occurs even with Kernel 4.0 RC7. [ 29.599327] ------------[ cut here ]------------ [ 29.599357] WARNING: CPU: 0 PID: 931 at /home/kernel/COD/linux/drivers/gpu/drm/i915/intel_display.c:1260 assert_plane.constprop.85+0x7a/0xb0 [i915]() [ 29.599358] plane A assertion failure (expected on, current off) [ 29.599381] Modules linked in: ctr ccm binfmt_misc rfcomm bnep nls_iso8859_1 arc4 intel_rapl iosf_mbi x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel kvm snd_hda_codec_hdmi iwlmvm snd_hda_codec_realtek snd_hda_codec_generic mac80211 uvcvideo videobuf2_vmalloc videobuf2_memops snd_hda_intel videobuf2_core v4l2_common snd_hda_controller videodev snd_hda_codec media iwlwifi snd_hwdep btusb joydev serio_raw thinkpad_acpi bluetooth snd_pcm cfg80211 nvram lpc_ich snd_seq_midi snd_seq_midi_event snd_rawmidi snd_seq snd_seq_device snd_timer snd mei_me mei shpchp soundcore mac_hid parport_pc ppdev lp parport autofs4 dm_crypt crct10dif_pclmul crc32_pclmul i915 ghash_clmulni_intel aesni_intel aes_x86_64 lrw gf128mul glue_helper ablk_helper cryptd psmouse e1000e i2c_algo_bit drm_kms_helper ahci drm [ 29.599382] ptp libahci pps_core wmi video [ 29.599384] CPU: 0 PID: 931 Comm: Xorg Not tainted 4.0.0-040000rc7-generic #201504061936 [ 29.599385] Hardware name: LENOVO 20BSCTO1WW/20BSCTO1WW, BIOS N14ET25W (1.03 ) 12/01/2014 [ 29.599387] 00000000000004ec ffff88024165b6c8 ffffffff817e34d6 0000000000002112 [ 29.599388] ffff88024165b718 ffff88024165b708 ffffffff810791b7 ffff88024165b738 [ 29.599389] 0000000000000000 ffff88023f6e0000 ffff880036170800 ffff88023f6e0000 [ 29.599390] Call Trace: [ 29.599394] [<ffffffff817e34d6>] dump_stack+0x45/0x57 [ 29.599397] [<ffffffff810791b7>] warn_slowpath_common+0x97/0xe0 [ 29.599399] [<ffffffff810792b6>] warn_slowpath_fmt+0x46/0x50 [ 29.599419] [<ffffffffc02b665a>] assert_plane.constprop.85+0x7a/0xb0 [i915] [ 29.599436] [<ffffffffc02c1a9e>] hsw_disable_ips+0x5e/0x1b0 [i915] [ 29.599452] [<ffffffffc02c1e38>] intel_crtc_disable_planes+0x48/0x150 [i915] [ 29.599468] [<ffffffffc02c2475>] haswell_crtc_disable+0x55/0x2d0 [i915] [ 29.599483] [<ffffffffc02c2bf8>] __intel_set_mode+0x1b8/0x3e0 [i915] [ 29.599497] [<ffffffffc02c6758>] intel_crtc_set_config+0x408/0x4f0 [i915] [ 29.599511] [<ffffffffc00943c7>] ? drm_atomic_state_free+0x27/0x50 [drm] [ 29.599527] [<ffffffffc02d6d3c>] ? intel_atomic_commit+0xcc/0x100 [i915] [ 29.599546] [<ffffffffc010497d>] ? drm_atomic_helper_plane_set_property+0x8d/0xc0 [drm_kms_helper] [ 29.599557] [<ffffffffc0084016>] drm_mode_set_config_internal+0x66/0x110 [drm] [ 29.599563] [<ffffffffc0107678>] restore_fbdev_mode+0xc8/0xf0 [drm_kms_helper] [ 29.599570] [<ffffffffc0109190>] drm_fb_helper_restore_fbdev_mode_unlocked+0x30/0x80 [drm_kms_helper] [ 29.599575] [<ffffffffc0109204>] drm_fb_helper_set_par+0x24/0x50 [drm_kms_helper] [ 29.599591] [<ffffffffc02d344a>] intel_fbdev_set_par+0x1a/0x60 [i915] [ 29.599594] [<ffffffff81438af3>] fb_set_var+0x283/0x3a0 [ 29.599597] [<ffffffff810b2330>] ? check_preempt_wakeup+0x110/0x210 [ 29.599599] [<ffffffff8142fc14>] fbcon_blank+0x1e4/0x2d0 [ 29.599602] [<ffffffff814c25a0>] do_unblank_screen.part.22+0xa0/0x180 [ 29.599604] [<ffffffff814c26cc>] do_unblank_screen+0x4c/0x80 [ 29.599606] [<ffffffff814b7b95>] complete_change_console+0x65/0xf0 [ 29.599607] [<ffffffff814b8d2d>] vt_ioctl+0x110d/0x1190 [ 29.599616] [<ffffffffc0078c9e>] ? drm_ioctl+0x9e/0x590 [drm] [ 29.599619] [<ffffffff814ab568>] tty_ioctl+0x418/0x980 [ 29.599621] [<ffffffff8123b854>] ? fsnotify+0x204/0x260 [ 29.599624] [<ffffffff8120f2a5>] do_vfs_ioctl+0x75/0x320 [ 29.599626] [<ffffffff811fca06>] ? vfs_write+0x196/0x1f0 [ 29.599628] [<ffffffff812195e5>] ? __fget_light+0x25/0x70 [ 29.599630] [<ffffffff8120f5e1>] SyS_ioctl+0x91/0xb0 [ 29.599632] [<ffffffff817efccd>] system_call_fastpath+0x16/0x1b [ 29.599633] ---[ end trace 9dbfb71a503e8331 ]--- [ 300.980842] mce: [Hardware Error]: Machine check events logged [ 334.949063] ------------[ cut here ]------------ [ 334.949096] WARNING: CPU: 1 PID: 931 at /home/kernel/COD/linux/drivers/gpu/drm/i915/intel_display.c:1260 assert_plane.constprop.85+0x7a/0xb0 [i915]() [ 334.949097] plane A assertion failure (expected on, current off) [ 334.949122] Modules linked in: ctr ccm binfmt_misc rfcomm bnep nls_iso8859_1 arc4 intel_rapl iosf_mbi x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel kvm snd_hda_codec_hdmi iwlmvm snd_hda_codec_realtek snd_hda_codec_generic mac80211 uvcvideo videobuf2_vmalloc videobuf2_memops snd_hda_intel videobuf2_core v4l2_common snd_hda_controller videodev snd_hda_codec media iwlwifi snd_hwdep btusb joydev serio_raw thinkpad_acpi bluetooth snd_pcm cfg80211 nvram lpc_ich snd_seq_midi snd_seq_midi_event snd_rawmidi snd_seq snd_seq_device snd_timer snd mei_me mei shpchp soundcore mac_hid parport_pc ppdev lp parport autofs4 dm_crypt crct10dif_pclmul crc32_pclmul i915 ghash_clmulni_intel aesni_intel aes_x86_64 lrw gf128mul glue_helper ablk_helper cryptd psmouse e1000e i2c_algo_bit drm_kms_helper ahci drm [ 334.949125] ptp libahci pps_core wmi video [ 334.949128] CPU: 1 PID: 931 Comm: Xorg Tainted: G W 4.0.0-040000rc7-generic #201504061936 [ 334.949128] Hardware name: LENOVO 20BSCTO1WW/20BSCTO1WW, BIOS N14ET25W (1.03 ) 12/01/2014 [ 334.949131] 00000000000004ec ffff88024165b6c8 ffffffff817e34d6 0000000000002a68 [ 334.949132] ffff88024165b718 ffff88024165b708 ffffffff810791b7 ffff88024165b738 [ 334.949134] 0000000000000000 ffff88023f6e0000 ffff880036170800 ffff88023f6e0000 [ 334.949134] Call Trace: [ 334.949139] [<ffffffff817e34d6>] dump_stack+0x45/0x57 [ 334.949143] [<ffffffff810791b7>] warn_slowpath_common+0x97/0xe0 [ 334.949145] [<ffffffff810792b6>] warn_slowpath_fmt+0x46/0x50 [ 334.949167] [<ffffffffc02b665a>] assert_plane.constprop.85+0x7a/0xb0 [i915] [ 334.949186] [<ffffffffc02c1a9e>] hsw_disable_ips+0x5e/0x1b0 [i915] [ 334.949204] [<ffffffffc02c1e38>] intel_crtc_disable_planes+0x48/0x150 [i915] [ 334.949221] [<ffffffffc02c2475>] haswell_crtc_disable+0x55/0x2d0 [i915] [ 334.949237] [<ffffffffc02c2bf8>] __intel_set_mode+0x1b8/0x3e0 [i915] [ 334.949255] [<ffffffffc02c6758>] intel_crtc_set_config+0x408/0x4f0 [i915] [ 334.949272] [<ffffffffc00943c7>] ? drm_atomic_state_free+0x27/0x50 [drm] [ 334.949291] [<ffffffffc02d6d3c>] ? intel_atomic_commit+0xcc/0x100 [i915] [ 334.949300] [<ffffffffc010497d>] ? drm_atomic_helper_plane_set_property+0x8d/0xc0 [drm_kms_helper] [ 334.949312] [<ffffffffc0084016>] drm_mode_set_config_internal+0x66/0x110 [drm] [ 334.949320] [<ffffffffc0107678>] restore_fbdev_mode+0xc8/0xf0 [drm_kms_helper] [ 334.949328] [<ffffffffc0109190>] drm_fb_helper_restore_fbdev_mode_unlocked+0x30/0x80 [drm_kms_helper] [ 334.949334] [<ffffffffc0109204>] drm_fb_helper_set_par+0x24/0x50 [drm_kms_helper] [ 334.949352] [<ffffffffc02d344a>] intel_fbdev_set_par+0x1a/0x60 [i915] [ 334.949356] [<ffffffff81438af3>] fb_set_var+0x283/0x3a0 [ 334.949359] [<ffffffff810b1451>] ? update_curr+0x141/0x1f0 [ 334.949361] [<ffffffff8142fc14>] fbcon_blank+0x1e4/0x2d0 [ 334.949365] [<ffffffff814c25a0>] do_unblank_screen.part.22+0xa0/0x180 [ 334.949367] [<ffffffff814c26cc>] do_unblank_screen+0x4c/0x80 [ 334.949369] [<ffffffff814b7b95>] complete_change_console+0x65/0xf0 [ 334.949371] [<ffffffff814b8d2d>] vt_ioctl+0x110d/0x1190 [ 334.949381] [<ffffffffc0078c9e>] ? drm_ioctl+0x9e/0x590 [drm] [ 334.949384] [<ffffffff810b1451>] ? update_curr+0x141/0x1f0 [ 334.949387] [<ffffffff814ab568>] tty_ioctl+0x418/0x980 [ 334.949390] [<ffffffff8123b854>] ? fsnotify+0x204/0x260 [ 334.949393] [<ffffffff8120f2a5>] do_vfs_ioctl+0x75/0x320 [ 334.949396] [<ffffffff811fca06>] ? vfs_write+0x196/0x1f0 [ 334.949398] [<ffffffff812195e5>] ? __fget_light+0x25/0x70 [ 334.949401] [<ffffffff8120f5e1>] SyS_ioctl+0x91/0xb0 [ 334.949403] [<ffffffff817efccd>] system_call_fastpath+0x16/0x1b [ 334.949405] ---[ end trace 9dbfb71a503e8332 ]--- [ 339.170035] [drm:intel_cpu_fifo_underrun_irq_handler [i915]] *ERROR* CPU pipe A FIFO underrun
Please let me know if I can be of any assistance in debugging this.
*** Bug 90062 has been marked as a duplicate of this bug. ***
*** Bug 90896 has been marked as a duplicate of this bug. ***
(In reply to matthias.a.lee from comment #23) > Please let me know if I can be of any assistance in debugging this. Please try this patch http://patchwork.freedesktop.org/patch/50675
Is there a build including that patch or will I have to build it myself?
(In reply to matthias.a.lee from comment #27) > Is there a build including that patch or will I have to build it myself? As an upstream we don't provide builds, you're expected to be able to apply and test patches. Sometimes your distro developers may be able to help.
Verified latest drm-intel-nightly_8207b9_20150616+ kernel on BDW, this issue has been fixed, So closed.
*** Bug 90441 has been marked as a duplicate of this bug. ***
Closing verified+fixed.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.